# 19211_Terekhin_C-

./: .gitignore  README.md
Homework/: class Array.cpp  smart pointer.cpp
Lab0/: FileReader.cpp  FileReader.h  Source.cpp
Lab0/test/: input.txt  output.csv
Lab1/Lab1/: CMakeLists.txt  Trit_set.cpp  Trit_set.h  test.cpp
Lab2/: CMakeLists.txt  Dump.cpp  Dump.h  Executor.cpp  Executor.h  Factory.h  Grep.cpp  Grep.h  Program_parser.cpp  Program_parser.h  ReadFile.cpp  ReadFile.h  Replace.cpp  Replace.h  Sort.cpp  Sort.h  Workflow.h  Writefile.cpp  Writefile.h  main.cpp
Lab3/: Lab3.pro  factory.h  game.cpp  game.h  gamefield.cpp  gamefield.h  gameri.h  gameroptimal.cpp  gameroptimal.h  gamerrandom.cpp  gamerrandom.h  gameruser.cpp  gameruser.h  gamewindow.cpp  gamewindow.h  gamewindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapmaker.cpp  mapmaker.h  mapmaker.ui  mapmakerwidget.cpp  mapmakerwidget.h  mapwidget.cpp  mapwidget.h  resource.qrc  settingswindow.cpp  settingswindow.h  settingswindow.ui
Lab3/info/: MapF.txt  MapS.txt
Lab4/: CMakeLists.txt  CSVParser.h  Lab4.cpp  Printer.h  example.csv
